--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>My First Ever Website</h1>
+    <h3>Look I can drink coffee</h3>
+    <p>But I never smoke</p>
 </body>
 </html>
