--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h1>My First Ever Website</h1>
     <h3>Look I can drink coffee</h3>
     <p>But I never smoke</p>
+    <input type="text">
+    <br>
+    <button>Click Me Sona!!!</button>
 </body>
 </html>
