--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <input type="text">
     <br>
     <button>Click Me Sona!!!</button>
-    <p>Ami Gauche Shoytan</p>
+    <h1>Ami Valo Chele</h1>
 </body>
 </html>
